force-app/main/default/objects/Apttus_Config2__BillingPreference__c/Apttus_Config2__BillingPreference__c.object-meta.xml
<CustomObject>
    <description>Represents a functional preference for billing purposes</description>
    <label>Billing Preference</label>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>