force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Billing__UsageRatingPriceFieldOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UsageRatingPriceFieldOverride__c</fullName>
    <description>This field will be used for usage rating instead of the List Price. This setting will take precedence over the Global setting.</description>
    <inlineHelpText>Enter the API name of the price field based on which usage will be rated.</inlineHelpText>
    <label>Usage Rating Price Field Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>