force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the billing preference is active. Inactive preferences are not available for new associations.</description>
    <inlineHelpText>Indicates whether the billing preference is active. Inactive preferences are not available for new associations.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>