force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__BillingCycleStart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingCycleStart__c</fullName>
    <description>Indicates when the billing cycle should start</description>
    <inlineHelpText>Indicates when the billing cycle should start</inlineHelpText>
    <label>Billing Cycle Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Day of Month</fullName>
                <default>true</default>
                <label>Billing Day of Month</label>
            </value>
            <value>
                <fullName>Period Start Date</fullName>
            </value>
            <value>
                <fullName>Account Billing Day of Month</fullName>
            </value>
            <value>
                <fullName>Billing Day of Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>