force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__BillingDayOfMonth2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingDayOfMonth2__c</fullName>
    <description>The billing day of month. Specific Day of Month, End of Month, etc</description>
    <inlineHelpText>The billing day of month. Specific Day of Month, End of Month, etc</inlineHelpText>
    <label>Billing Day Of Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st of the Month</fullName>
                <default>true</default>
                <label>1st of the Month</label>
            </value>
            <value>
                <fullName>2nd of the Month</fullName>
            </value>
            <value>
                <fullName>3rd of the Month</fullName>
            </value>
            <value>
                <fullName>4th of the Month</fullName>
            </value>
            <value>
                <fullName>5th of the Month</fullName>
            </value>
            <value>
                <fullName>6th of the Month</fullName>
            </value>
            <value>
                <fullName>7th of the Month</fullName>
            </value>
            <value>
                <fullName>8th of the Month</fullName>
            </value>
            <value>
                <fullName>9th of the Month</fullName>
            </value>
            <value>
                <fullName>10th of the Month</fullName>
            </value>
            <value>
                <fullName>11th of the Month</fullName>
            </value>
            <value>
                <fullName>12th of the Month</fullName>
            </value>
            <value>
                <fullName>13th of the Month</fullName>
            </value>
            <value>
                <fullName>14th of the Month</fullName>
            </value>
            <value>
                <fullName>15th of the Month</fullName>
            </value>
            <value>
                <fullName>16th of the Month</fullName>
            </value>
            <value>
                <fullName>17th of the Month</fullName>
            </value>
            <value>
                <fullName>18th of the Month</fullName>
            </value>
            <value>
                <fullName>19th of the Month</fullName>
            </value>
            <value>
                <fullName>20th of the Month</fullName>
            </value>
            <value>
                <fullName>21st of the Month</fullName>
            </value>
            <value>
                <fullName>22nd of the Month</fullName>
            </value>
            <value>
                <fullName>23rd of the Month</fullName>
            </value>
            <value>
                <fullName>24th of the Month</fullName>
            </value>
            <value>
                <fullName>25th of the Month</fullName>
            </value>
            <value>
                <fullName>26th of the Month</fullName>
            </value>
            <value>
                <fullName>27th of the Month</fullName>
            </value>
            <value>
                <fullName>28th of the Month</fullName>
            </value>
            <value>
                <fullName>29th of the Month</fullName>
            </value>
            <value>
                <fullName>30th of the Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>