force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__BillingDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingDayOfWeek__c</fullName>
    <description>The billing day of the week. Indicates the starting day of week for which billing happens.</description>
    <inlineHelpText>The billing day of the week. Indicates the starting day of week for which billing happens.</inlineHelpText>
    <label>Billing Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>