force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__BillingInterval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingInterval__c</fullName>
    <description>The billing interval</description>
    <inlineHelpText>The billing interval</inlineHelpText>
    <label>Billing Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anytime</fullName>
                <default>true</default>
                <label>Anytime</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>