force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__Default__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the preference is a default for the organization.</description>
    <inlineHelpText>Indicates whether the preference is a default for the organization.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>