force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__EarlyTerminationRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EarlyTerminationRule__c</fullName>
    <description>The early termination rule to apply when an asset is terminated</description>
    <inlineHelpText>Select an option to enable early termination charges. This is applicable only when the asset is terminated.</inlineHelpText>
    <label>Early Termination Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Credit On Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>