force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__HideInformational__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideInformational__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suppresses the creation of all informational billing schedules</description>
    <inlineHelpText>Suppresses the creation of all informational billing schedules</inlineHelpText>
    <label>Hide Informational</label>
    <type>Checkbox</type>
</CustomField>