force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__InvoiceDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InvoiceDeliveryMethod__c</fullName>
    <description>The invoice delivery preference</description>
    <inlineHelpText>The invoice delivery preference</inlineHelpText>
    <label>Invoice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>3rd party</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>