force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__InvoiceOutputFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InvoiceOutputFormat__c</fullName>
    <description>The invoice output format.</description>
    <inlineHelpText>The invoice output format.</inlineHelpText>
    <label>Invoice Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>RTF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>