force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__ProrationPeriodTreatment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProrationPeriodTreatment__c</fullName>
    <description>The proration period treatment method. This is to deal with the time between when the service period starts and the ready for billing day.</description>
    <inlineHelpText>The proration period treatment method. This is to deal with the time between when the service period starts and the ready for billing day.</inlineHelpText>
    <label>Proration Period Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Separate Period</fullName>
                <default>true</default>
                <label>Separate Period</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>