force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__ReadyForInvoiceDateOffset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ReadyForInvoiceDateOffset__c</fullName>
    <description>This field is used to offset the ready for invoice date by days</description>
    <inlineHelpText>Enter any numeric value here. It can be positive or negative</inlineHelpText>
    <label>Ready For Invoice Date Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>