force-app/main/default/objects/Apttus_Config2__BillingPreference__c/fields/Apttus_Config2__TaxLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TaxLevel__c</fullName>
    <description>The default tax level</description>
    <inlineHelpText>The default tax level</inlineHelpText>
    <label>Tax Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>