force-app/main/default/objects/Apttus_Config2__BillingPreference__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__BillingCycleStart__c</columns>
    <columns>Apttus_Config2__CalendarCycleStart__c</columns>
    <columns>Apttus_Config2__BillingDayOfMonth2__c</columns>
    <columns>Apttus_Config2__BillingDayOfWeek__c</columns>
    <columns>Apttus_Config2__HideInformational__c</columns>
    <columns>Apttus_Config2__DoNotCreateInformational__c</columns>
    <columns>Apttus_Config2__Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>